# bash-parser

./: CHANGELOG.md  bash-parser.cabal  hie.yaml
src/: BashParser.hs
test/: BashParserSpec.hs
